Bug 890076 - Move isConstructing to CallArgs, r=Waldo